--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "build-deploy": "npm run build && cp dist/index.html dist/404.html",
+    "predeploy": "npm run build-deploy",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
