--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "build-deploy": "npm run build && cp dist/index.html dist/404.html",
-    "predeploy": "npm run build-deploy",
-    "deploy": "gh-pages -d dist"
-  },
+  "dev": "vite",
+  "build": "tsc && vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "lucide-react": "^0.548.0",
